    timestamps nor version or node author.
  * Added login retry wait delay on failures.
  * Added support for 'in home' or 'from home' in sqliss.
  * Added support for any scope with 'in sub_nodes' (uses fullpath field).
  * Added forced skin setting for sites (overwrites all but ACL skin settings). <== TODO: Document
  * Added support for profile users.  <== TODO: Document
  * Added support to edit linked_user through node's pseudo attribute 'uparams' (admin only).  <== TODO: Document
    
* Minor changes
  * Fixed gemspec to not include TextMate helper and selenium plugin.
  * Fixed xml generated file caching.
  * Added NODE_ID in 'redir' param on node creation (replaced by actual id). <== TODO: Document
  * Added fetch_html rubyless method to views (does an HTTP GET and returns body).
  * Fixed a bug in site alias zafu compilation (wrong home reference).
  * Fixed anchor in zazen url "":22#foo should link to anchor #foo in node '22'.

== 1.2.6, 1.2.7 2013-08-16

* Major changes
  * Support for multiple domains (site alias) for a single site.
  * Added support for wkhtmltopdf (Thanks Jean-Baptiste).
  
* Minor changes
  * Added 'cmd' option for pdf brick. <== TODO: Document
  * Added 'local_ips' option to bricks.yml (used when pdf engine cannot render non-public assets). <== TODO: Document
  * Fixed dependency on newer versions of rails.
  
== 1.2.5 2013-07-15

* Major changes
 * To support video streaming: redirect on first document cache. WARNING: This 
   implies changes to vhost files !
 * WARN: Properties in list context do not resolve with first element anymore. "first" prefix needed.
 * Enable VirtualClass on native classes !
 * Added 'activity' brick which records visitor's last "seen_at" date. <== TODO: Document
 * Support for site alias (other domain pointing to same data) "rake mkalias". <== TODO: Document

* Minor changes
 * Fixed encode_params in Ajax requests.
 * Fixed cached path in vhost file.