@@ -16,7 +16,7 @@ end %>
     <% if li.profile_id %>
       <%= li.profile %>
     <% else %>
-      <%= li.groups.map {|g| g.name }.join(', ') %>
+      <%= li.groups.map {|g| g.name }.sort.join('<br/>') %>
     <% end %>
   </td>
   <td class="login"><%= _(User::Num_to_status[li.status].to_s) %></td>
