@@ -1,3 +1,4 @@
+.grid td {white-space:pre-line}
 .grid td.action {border-width:0 0 0 1px; font-size:70%}
 .grid tr.action td {border-width:0 0 1px 0; font-size:70%}
 .grid tr.action td.action {border:0}
